apps/train-ticket/k8s-deployment/ts-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: train-ticket
  labels:
    name: train-ticket
    istio-injection: enabled
